[gd_scene load_steps=17 format=3 uid="uid://bycgsy50wsy4c"]

[ext_resource type="Script" uid="uid://bb06meeue71v1" path="res://Scripts/DropGameKit/CampaignManagement/campaign_admin_system.gd" id="1_ldnsl"]
[ext_resource type="Script" uid="uid://bapipatfqt33v" path="res://Scripts/Utility/screen_manager.gd" id="2_5to25"]
[ext_resource type="Texture2D" uid="uid://bdjw50vivwoew" path="res://Textures/Icons/CloseIcon.PNG" id="3_yrdp3"]
[ext_resource type="Theme" uid="uid://ds48g7imsbnvb" path="res://RubyCorpTheme.tres" id="4_txo57"]
[ext_resource type="Script" uid="uid://bc12jv82xckj8" path="res://addons/SolanaSDK/Scripts/Utility/DisplaySystems/Accounts/account_display_system.gd" id="5_l58jm"]
[ext_resource type="PackedScene" uid="uid://bakwei0jiw7b2" path="res://Scripts/DropGameKit/CampaignManagement/CampaignSelectEntry.tscn" id="6_2hy6e"]
[ext_resource type="Script" uid="uid://5u0rbfhxfmmv" path="res://Scripts/DropGameKit/CampaignManagement/campaign_manager.gd" id="8_vqr0a"]
[ext_resource type="Script" uid="uid://fyl7vadeoj03" path="res://addons/SolanaSDK/Scripts/Utility/DisplaySystems/Assets/displayable_asset.gd" id="10_y2hwd"]
[ext_resource type="Script" uid="uid://bnket1c06w8fq" path="res://addons/SolanaSDK/Scripts/Utility/Input/number_label.gd" id="11_dh37k"]
[ext_resource type="Texture2D" uid="uid://dchy7ed3ybfi1" path="res://Textures/LogosAndTokens/Zenny token.PNG" id="12_jl7ur"]
[ext_resource type="Script" uid="uid://bw7bp5xiv4j8l" path="res://Scripts/DropGameKit/Leaderboard/campaign_leaderboard.gd" id="13_j1bf4"]
[ext_resource type="PackedScene" uid="uid://ebyxtunpa1fd" path="res://Scripts/DropGameKit/Leaderboard/LeaderboardEntry.tscn" id="14_2hy6e"]
[ext_resource type="Script" uid="uid://xl86n3733lsl" path="res://Scripts/Utility/timed_button.gd" id="15_3iieg"]
[ext_resource type="Texture2D" uid="uid://bpt1e8u1buonk" path="res://Textures/BrandingAssets/whosthatrubian.png" id="24_lm76v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skjvp"]
bg_color = Color(0, 0.443137, 0.439216, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1s1dl"]

[node name="CampaignAdminDisplay" type="Control" node_paths=PackedStringArray("screen_manager", "campaign_selector", "campaign_manager")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_ldnsl")
screen_manager = NodePath("ScreenManager")
campaign_selector = NodePath("Content/CampaignDisplay")
campaign_manager = NodePath("Content/CampaignManager")

[node name="ScreenManager" type="Node" parent="." node_paths=PackedStringArray("starting_panel", "screens")]
script = ExtResource("2_5to25")
starting_panel = NodePath("../Content/CampaignDisplay")
screens = [NodePath("../Content/LoadingScreen"), NodePath("../Content/CampaignDisplay"), NodePath("../Content/CampaignManager")]

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_txo57")
theme_override_styles/panel = SubResource("StyleBoxFlat_skjvp")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="PanelContainer" parent="Content"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"PanelFlat"

[node name="MarginContainer" type="MarginContainer" parent="Content/Header"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Content/Header/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TextureButton" type="TextureButton" parent="Content/Header/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("3_yrdp3")
texture_pressed = ExtResource("3_yrdp3")
texture_hover = ExtResource("3_yrdp3")
texture_disabled = ExtResource("3_yrdp3")
texture_focused = ExtResource("3_yrdp3")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="Content/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"HeaderMedium"
text = "CAMPAIGN MANAGER"

[node name="LoadingScreen" type="MarginContainer" parent="Content"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="LoadingScreen" type="PanelContainer" parent="Content/LoadingScreen"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_1s1dl")

[node name="VBoxContainer" type="VBoxContainer" parent="Content/LoadingScreen/LoadingScreen"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Content/LoadingScreen/LoadingScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"HeaderMedium"
text = "LOADING..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CampaignDisplay" type="MarginContainer" parent="Content" node_paths=PackedStringArray("container", "no_entries_overlay")]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
script = ExtResource("5_l58jm")
container = NodePath("VboxContainer/ActiveCampaignsContainer/MarginContainer/ScrollContainer/CampaignList")
entry_scn = ExtResource("6_2hy6e")
no_entries_overlay = NodePath("VboxContainer/ActiveCampaignsContainer/NoFound")

[node name="VboxContainer" type="VBoxContainer" parent="Content/CampaignDisplay"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CampaignsLabel" type="Label" parent="Content/CampaignDisplay/VboxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("4_txo57")
text = "View and manage the campaigns you have created for Gigs"
autowrap_mode = 2

[node name="ActiveCampaignsContainer" type="PanelContainer" parent="Content/CampaignDisplay/VboxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_txo57")

[node name="MarginContainer" type="MarginContainer" parent="Content/CampaignDisplay/VboxContainer/ActiveCampaignsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="Content/CampaignDisplay/VboxContainer/ActiveCampaignsContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CampaignList" type="VBoxContainer" parent="Content/CampaignDisplay/VboxContainer/ActiveCampaignsContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NoFound" type="Label" parent="Content/CampaignDisplay/VboxContainer/ActiveCampaignsContainer"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelInverted"
text = "No campaigns found..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="CampaignManager" type="MarginContainer" parent="Content" node_paths=PackedStringArray("campaign_name_label", "gate_displayable", "owner_displayable", "campaign_type_label", "treasury_token_displayable", "deposit_token_displayable", "total_games_label", "unique_players_label", "max_reward_label", "leaderboard", "fees_collected", "close_button")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("8_vqr0a")
campaign_name_label = NodePath("Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MineName/MineName")
gate_displayable = NodePath("Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/CampaignGate")
owner_displayable = NodePath("Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MoreDetails/CampaignOwner")
campaign_type_label = NodePath("Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MoreDetails/CampaignType/TypeLabel")
treasury_token_displayable = NodePath("Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/TreasuryBalanceContainer/TreasuryBalanceContainer")
deposit_token_displayable = NodePath("Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/DepositBalanceContainer/DepositBalanceContainer")
total_games_label = NodePath("Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/TotalGames/TotalGames")
unique_players_label = NodePath("Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/UniquePlayers/UniquePlayers")
max_reward_label = NodePath("Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/MaxReward/MaxReward")
leaderboard = NodePath("Content/ScrollContainer/GeneralInfo/Leaderboard")
fees_collected = NodePath("Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/FeesCollected/FeesCollected")
close_button = NodePath("Content/ScrollContainer/GeneralInfo/CampaignCloseButton")

[node name="Content" type="VBoxContainer" parent="Content/CampaignManager"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Content/CampaignManager/Content"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_txo57")
horizontal_scroll_mode = 0

[node name="GeneralInfo" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_txo57")
theme_type_variation = &"ButtonFlatAlt"
text = "BACK"

[node name="MainDetails" type="HBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="GateDisplayable" type="TextureRect" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails"]
layout_mode = 2
texture = ExtResource("24_lm76v")
expand_mode = 3
stretch_mode = 5

[node name="DetailsContainer" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MineName" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MineName"]
layout_mode = 2
theme = ExtResource("4_txo57")
text = "Campaign Name"
vertical_alignment = 1

[node name="MineName" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MineName"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelSpecial"
theme_override_font_sizes/font_size = 30
text = "Super Epic Rubian Mine"
vertical_alignment = 1

[node name="CampaignGate" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer" node_paths=PackedStringArray("visual", "name_label")]
layout_mode = 2
script = ExtResource("10_y2hwd")
visual = NodePath("../../GateDisplayable")
name_label = NodePath("GateName")
max_name_length = 25

[node name="GatePlayers" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/CampaignGate"]
layout_mode = 2
theme = ExtResource("4_txo57")
text = "Players"

[node name="GateName" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/CampaignGate"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelSpecial"
theme_override_font_sizes/font_size = 30
text = "Rubians"

[node name="MoreDetails" type="HBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CampaignType" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MoreDetails"]
layout_mode = 2

[node name="CampaignType" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MoreDetails/CampaignType"]
layout_mode = 2
theme = ExtResource("4_txo57")
text = "Type"

[node name="TypeLabel" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MoreDetails/CampaignType"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelSpecial"
theme_override_font_sizes/font_size = 30
text = "Token"

[node name="CampaignOwner" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MoreDetails"]
layout_mode = 2
script = ExtResource("10_y2hwd")

[node name="CampaignOwner" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MoreDetails/CampaignOwner"]
layout_mode = 2
theme = ExtResource("4_txo57")
text = "Owner"

[node name="OwnerName" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/MainDetails/DetailsContainer/MoreDetails/CampaignOwner"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelSpecial"
theme_override_font_sizes/font_size = 30
text = "Anon"

[node name="ExtraDetails" type="HBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StatsContainer" type="PanelContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails"]
layout_mode = 2
theme_type_variation = &"PanelFlatAlt"

[node name="MarginContainer" type="MarginContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TotalGames" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/TotalGames"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelInverted"
text = "Total Games"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalGames" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/TotalGames"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "268"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UniquePlayers" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/UniquePlayers"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelInverted"
text = "Unique Players"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UniquePlayers" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/UniquePlayers"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "56"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxReward" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/MaxReward"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelInverted"
text = "Max Reward"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxReward" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/StatsContainer/MarginContainer/HBoxContainer/MaxReward"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "5K"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_dh37k")
format_mode = 1
decimal_amount = 1

[node name="TokenDetails" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 2

[node name="TreasuryBalanceContainer" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails"]
layout_mode = 2

[node name="TreasuryBalance" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/TreasuryBalanceContainer"]
layout_mode = 2
theme = ExtResource("4_txo57")
text = "Treasury"

[node name="TreasuryBalanceContainer" type="HBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/TreasuryBalanceContainer" node_paths=PackedStringArray("visual", "balance_label")]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("10_y2hwd")
visual = NodePath("TokenVisual")
image_size = 64
balance_label = NodePath("TokensLabel")

[node name="TokenVisual" type="TextureRect" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/TreasuryBalanceContainer/TreasuryBalanceContainer"]
layout_mode = 2
texture = ExtResource("12_jl7ur")
expand_mode = 3
stretch_mode = 5

[node name="TokensLabel" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/TreasuryBalanceContainer/TreasuryBalanceContainer"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"HeaderMedium"
theme_override_font_sizes/font_size = 60
text = "96.25M"
vertical_alignment = 1
script = ExtResource("11_dh37k")
format_mode = 1
decimal_amount = 2

[node name="DepositBalanceContainer" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails"]
layout_mode = 2

[node name="DepositBalance" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/DepositBalanceContainer"]
layout_mode = 2
theme = ExtResource("4_txo57")
text = "Earned / Staked"

[node name="DepositBalanceContainer" type="HBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/DepositBalanceContainer" node_paths=PackedStringArray("visual", "balance_label")]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("10_y2hwd")
visual = NodePath("TokenVisual")
image_size = 64
balance_label = NodePath("TokensLabel")

[node name="TokenVisual" type="TextureRect" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/DepositBalanceContainer/DepositBalanceContainer"]
layout_mode = 2
texture = ExtResource("12_jl7ur")
expand_mode = 3
stretch_mode = 5

[node name="TokensLabel" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/DepositBalanceContainer/DepositBalanceContainer"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"HeaderMedium"
theme_override_font_sizes/font_size = 60
text = "96.25M"
vertical_alignment = 1
script = ExtResource("11_dh37k")
format_mode = 1
decimal_amount = 2

[node name="FeesCollected" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails"]
layout_mode = 2

[node name="Label" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/FeesCollected"]
layout_mode = 2
theme = ExtResource("4_txo57")
text = "Fees collected"
vertical_alignment = 1

[node name="FeesCollected" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/ExtraDetails/TokenDetails/FeesCollected"]
layout_mode = 2
theme = ExtResource("4_txo57")
theme_type_variation = &"LabelSpecial"
text = "0.0735 SOL"
vertical_alignment = 1

[node name="Leaderboard" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo" node_paths=PackedStringArray("leaderboard_display_system")]
layout_mode = 2
script = ExtResource("13_j1bf4")
leaderboard_display_system = NodePath("PanelContainer/MarginContainer/ScrollContainer")
allow_copy_player_address = true

[node name="Leaders" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/Leaderboard"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_txo57")
theme_type_variation = &"HeaderMedium"
theme_override_font_sizes/font_size = 60
text = "CAMPAIGN LEADERS"
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/Leaderboard"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/Leaderboard/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/Leaderboard/PanelContainer/MarginContainer" node_paths=PackedStringArray("container", "no_entries_overlay")]
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("5_l58jm")
container = NodePath("VBoxContainer")
entry_scn = ExtResource("14_2hy6e")
no_entries_overlay = NodePath("Overlay")
bring_new_to_back = false

[node name="Overlay" type="Label" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/Leaderboard/PanelContainer/MarginContainer/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("4_txo57")
text = "No Entries Yet!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/Leaderboard/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CampaignCloseButton" type="Button" parent="Content/CampaignManager/Content/ScrollContainer/GeneralInfo"]
custom_minimum_size = Vector2(520, 70)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_txo57")
theme_type_variation = &"ButtonFlat"
text = "CLOSE IN: 23h 15m 20s"
script = ExtResource("15_3iieg")
pre_start_prefix = "STARTS IN:"
time_left_prefix = "CLOSE IN:"
activated_text = "CLAIM AND CLOSE"
enable_on_started = false

[connection signal="pressed" from="Content/Header/MarginContainer/HBoxContainer/TextureButton" to="." method="close"]
[connection signal="pressed" from="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/BackButton" to="ScreenManager" method="switch_active_panel" binds= [1]]
[connection signal="pressed" from="Content/CampaignManager/Content/ScrollContainer/GeneralInfo/CampaignCloseButton" to="Content/CampaignManager" method="close"]
